# pet

./: README.md  fill_db_and_run.py  pyproject.toml  run.py
app/: app.py
app/routers/default/: models.py
app/routers/default/handlers/: classes.py  faculties.py  specializations.py  students.py
config/: config.py
database/: database.py  models.py
src/: faculties.py  specializations.py  students.py
tests/: conftest.py
tests/faculties/: test_create_faculty.py
