[tool.poetry]
name = "toy"
version = "0.1.0"
description = ""
authors = ["iuliia <marchenkoiuliia@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.1"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
python-dotenv = "^0.21.0"
# TODO poetry add tortoise-orm
asyncpg = "^0.26.0"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest-asyncio = "0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
